2009-01-16 Roman
- !!:/UI/QTCfg: Status update for remote stations is added.
- /UI/WebCfgD: Connection error's code changed to 10.


2009-01-15 Roman
- !:/SYS: Function for extracting space symbols from begin and end of string is added, TSYS::strNoSpace().
    Function TSYS::strEmpty() is deleted and replaced by TSYS::strNoSpace() everywhere.
- !!!:/Protocol/HTTP: Keep-Alive from HTTP protocol support is added. Critical for Opera.
- !!!:/UI/QTStarter: I18NTranslator QT traslator is added for transporting QT's translation requests to gettext I18N engine.
    QT's self dialogs' messages is translated to Russian and Ukrainian.
- /DemoDB: English translation of DB is updated for some translation fix.


2009-01-14 Roman
- FIX:/SYS: Config files for Transport.Sockets format is fixed. No work connection by default config.


2009-01-12 Roman OpenSCADA 0.6.3
- !!!!:/DemoDB: Translation to English is added. DB files separated to English and Russian.
- !!:/SYS: Add release 0.6.3 anounce documents.
- !!:/SYS: Updated FAQ, TODO and README documents.
- !!:/SYS: RPM build spec file is updated for new demo DB files configuration support.
- FIX:/DB: DB system table cache limit process is fixed.
- FIX:/UI/QTCfg: Wrap mode for text field is fixed.


2009-01-09 Roman
- FIX:/DAQ/JavaLikeCalc: Keyword 'return' is fixed. Recursive exit is added.
- FIX:/UI/VCAEngine: Last document's time greed calc is fixed for bTime > lastTime.
- FIX:/UI/Vision: x and y scaling by kadr in development mode is fixed using.
- /SYS: RPM build spec-file is updated for 0.6.3 build.
- !!!:/DemoDB: Document's close last document algoritm is final fixed and tested.


2009-01-08 Maxim
- FIX:/SYS: Some fixes to English variant of translation is done.
- FIX:/DAQ/DCON: Some fixes to English variant of translation is done.
- FIX:/Archive/DBArch: Some fixes to English variant of translation is done.
- FIX:/Archive/FSArch: Some fixes to English variant of translation is done.